--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
+title: Krishna Vemuri's FOSS 2020 page
+description: Webpage created by Krishna Vemuri as part of the CyVerse FOSS 2020 course.
