--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-midnight
 title: CyVerse FOSS 2020
 description: Webpage created by Krishna Vemuri as part of the CyVerse FOSS 2020 course.
-background-image:url('')
+background-image:url('IMG_20190705_201527-EFFECTS.jpg')
